<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">547547015371508</string>
    <string name="app_name">SmartMap</string>
    <string name="title_section1">Map</string>
    <string name="title_section2">Group</string>
    <string name="title_section3">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_group">Add a new group</string>
    <string name="done">Okay, done</string>
    <string name="search_group">Search groups..</string>
    <string name="invite_members">Invite members</string>
    <string name="show_members">Show members</string>
    <string name="leave_group">Leave group</string>
    <string name="delete_group">Delete group</string>
    <string name="share_group">Share group</string>
    <string name="enter_group_name">New group name</string>
    <string name="title_activity_create_group">Create A New Group</string>
    <string name="get_started">Start with Facebook Login!</string>
    <string name="settings">Settings</string>
    <string name="action_people">With whom?</string>
    <string name="action_people_default">Select friends</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="single_user_selected">%1$s</string>
    <string name="two_users_selected">%1$s and %2$s</string>
    <string name="multiple_users_selected">%1$s and %2$s others</string>
    <string name="title_activity_show_members">ShowMembersActivity</string>
    <string name="select_group">Select Group</string>

</resources>