<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/button_border"
    android:orientation="vertical" 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="0dp"
        android:background="@drawable/button_border"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentLeft="true"
            android:background="@android:color/white"
            android:layout_centerVertical="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:textColor="@color/blue"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/user" />

                <TextView
                    android:id="@+id/group_owner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="5dp"
                    android:text="Yingda Luo"
                    android:textColor="#6699CC"
                    android:textSize="15sp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dip" />

    <Button
        android:id="@+id/invite_members"
        style="@style/com_facebook_loginview_silver_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_members" />

    <Button
        android:id="@+id/show_members"
        style="@style/com_facebook_loginview_silver_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_members" />

    <Button
        android:id="@+id/share_group"
        style="@style/com_facebook_loginview_silver_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_group" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dip" />

    <Button
        android:id="@+id/leave_group"
        style="@style/com_facebook_loginview_default_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leave_group" />

    <Button
        android:id="@+id/delete_group"
        style="@style/com_facebook_loginview_default_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_group" />

</LinearLayout>